fix: remove supervisor name

--- a/common.tex
+++ b/common.tex
@@ -94,7 +94,7 @@
 		\end{itemize}
 	\end{enumerate}
 	
-	Руководитель работы \underline{А.\,С.\,Лебедев}
+	Руководитель работы \underline{\hspace*{3cm}}
 	
 	Задание принял к исполнению \underline{\studentname}
 	
